# example

./: .buildinfo  .coveragerc  .fastapi-mvc.yml  404.html  CHANGELOG.md  Dockerfile  LICENSE  Makefile  Nix.mk  Poetry.mk  README.md  Vagrantfile  api.html  changelog.html  default.nix  deployment.html  editable.nix  fastapi-mvc.ini  flake.nix  genindex.html  image.nix  index.html  install.html  license.html  nix.html  objects.inv  overlay.nix  py-modindex.html  pyproject.toml  search.html  searchindex.js  shell.nix  usage.html
.doctrees/: api.doctree  changelog.doctree  deployment.doctree  environment.pickle  index.doctree  install.doctree  license.doctree  nix.doctree  usage.doctree
.github/: dependabot.yml
.github/workflows/: docs.yml  integration.yml  main.yml  nix.yml  update-flake.yml
_sources/: api.rst.txt
charts/example/: Chart.yaml  README.md  values.yaml
charts/example/templates/: configmap.yml  deployment.yaml  ingress.yaml  service.yaml
charts/fastapi-mvc-example/: Chart.yaml  README.md  values.yaml
charts/fastapi-mvc-example/templates/: NOTES.txt  _helpers.tpl  configmap.yml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/fastapi-mvc-example/templates/tests/: test-connection.yaml
docs/: CHANGELOG.md  api.rst  conf.py  index.rst  install.rst  nix.rst  usage.rst
example/: __init__.py  __main__.py  version.py  wsgi.py
example/app/: __init__.py  asgi.py  router.py
example/app/controllers/: ready.py
example/app/exceptions/: __init__.py  http.py
example/app/utils/: __init__.py  aiohttp_client.py  redis.py
example/app/views/: __init__.py  error.py
example/cli/: __init__.py  cli.py  serve.py  utils.py
example/config/: __init__.py  application.py  gunicorn.py  redis.py
fastapi_mvc_example/: __init__.py  __main__.py  version.py  wsgi.py
fastapi_mvc_example/app/: __init__.py  asgi.py  router.py
fastapi_mvc_example/app/controllers/: ready.py
fastapi_mvc_example/app/controllers/api/: __init__.py
fastapi_mvc_example/app/controllers/api/v1/: ready.py
fastapi_mvc_example/app/exceptions/: __init__.py
fastapi_mvc_example/app/models/: __init__.py
fastapi_mvc_example/app/utils/: __init__.py  redis.py
fastapi_mvc_example/app/views/: __init__.py
fastapi_mvc_example/cli/: __init__.py  cli.py  serve.py
fastapi_mvc_example/cli/commands/: serve.py
fastapi_mvc_example/config/: __init__.py  application.py  router.py
tests/integration/: conftest.py  test_ready_endpoint.py
tests/integration/app/controllers/: test_ready.py
tests/unit/: conftest.py  test_wsgi.py
tests/unit/app/: conftest.py  test_asgi.py
tests/unit/app/controllers/: test_ready.py
tests/unit/app/controllers/api/v1/: test_ready.py
tests/unit/app/exceptions/: test_http.py
tests/unit/app/models/: test_ready.py  test_response.py
tests/unit/app/utils/: test_aiohttp_client.py  test_redis.py
tests/unit/app/views/: test_error.py  test_ready.py
tests/unit/cli/: test_cli.py  test_serve.py  test_utils.py
tests/unit/cli/commands/: test_serve.py
