[tool.poetry]
name = "example"
version = "0.1.0"
description = "This project was generated with fastapi-mvc."
authors = ["Radosław Szamszur <github@rsd.sh>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fastapi-mvc/example"
classifiers = [
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "~0.82.0"
uvicorn = {extras = ["standard"], version = "~0.18.3"}
gunicorn = "~20.1.0"
click = "~8.1.3"
aioredis = "~2.0.1"
aiohttp = "~3.8.1"

[tool.poetry.dev-dependencies]
pytest = "~6.2.4"
pytest-cov = "~2.12.0"
pytest-asyncio = "~0.15.1"
requests = "~2.25.1"
aioresponses = "~0.7.2"
mock = "~4.0.3"
flake8 = "~3.9.2"
flake8-docstrings = "~1.6.0"
flake8-import-order = "~0.18.1"
flake8-todo = "^0.7"
black = "~22.3.0"
Sphinx = "~4.5.0"
Pallets-Sphinx-Themes = "~2.0.2"
myst-parser = "~0.17.2"

[tool.poetry.scripts]
example = 'example.cli:cli'

[tool.poetry.urls]
"Issues" = "https://github.com/fastapi-mvc/example/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
