[tool.poetry]
name = "example"
version = "0.1.0"
description = "This project was generated with fastapi-mvc."
authors = ["Radosław Szamszur <github@rsd.sh>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fastapi-mvc/example"
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "~0.92.0"
uvicorn = {extras = ["standard"], version = "~0.20.0"}
gunicorn = "~20.1.0"
click = "~8.1.3"
redis = "~4.5.1"
aiohttp = "~3.8.4"

[tool.poetry.group.dev.dependencies]
pytest = "~7.2.1"
pytest-cov = "~4.0.0"
pytest-asyncio = "~0.20.3"
requests = "~2.28.2"
httpx = "~0.23.3"
aioresponses = "~0.7.3"
mypy = "~1.0.1"
flake8 = "~5.0.4"
flake8-docstrings = "~1.7.0"
flake8-import-order = "~0.18.1"
flake8-todo = "^0.7"
black = "~23.1.0"
Sphinx = "~5.3.0"
Pallets-Sphinx-Themes = "~2.0.2"
myst-parser = "~0.19.0"

[tool.poetry.scripts]
example = 'example.cli:cli'

[tool.poetry.urls]
"Issues" = "https://github.com/fastapi-mvc/example/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    "example/config/gunicorn.py",
    "example/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pass",
]

[tool.mypy]
exclude = [
    "config/gunicorn.py"
]
python_version = '3.10'
show_error_codes = true
follow_imports = 'silent'
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_unused_configs = true
disallow_subclassing_any = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
disallow_untyped_defs = true
implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "gunicorn.*",
    "redis.*",
]
ignore_missing_imports = true
